--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Simulador Calor Latente</title>
-  <link rel="stylesheet" href="fisica.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <video autoplay muted loop id="video-fondo">
@@ -55,6 +55,6 @@
 </div>
     </div>
   </div>
-  <script src="fisica.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
